feat(IDE): add api app

--- a/apps/frontend/admin/project.json
+++ b/apps/frontend/admin/project.json
@@ -4,7 +4,10 @@
   "projectType": "application",
   "prefix": "svvs",
   "sourceRoot": "apps/frontend/admin/src",
-  "tags": [],
+  "tags": [
+    "scope:frontend-admin",
+    "type:app"
+  ],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
@@ -59,7 +62,10 @@
           "browserTarget": "frontend-admin:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "proxyConfig": "apps/frontend/admin/proxy.conf.json"
+      }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
