--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nestjs/platform-express": "^9.1.1",
     "@nx/angular": "16.3.2",
     "@nx/nest": "^16.4.0-beta.1",
+    "axios": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -42,6 +43,7 @@
     "@nx/linter": "16.3.2",
     "@nx/node": "16.4.0-beta.1",
     "@nx/web": "16.3.2",
+    "@nx/webpack": "16.4.0-beta.1",
     "@nx/workspace": "16.3.2",
     "@schematics/angular": "~16.0.0",
     "@types/jest": "^29.4.0",
