--- a/package.json
+++ b/package.json
@@ -2,7 +2,52 @@
   "name": "@svvs/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "ng": "nx",
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
+    "nx": "nx",
+    "frontend-client:start": "ng serve frontend-client",
+    "frontend-client:build": "ng build frontend-client",
+    "frontend-client:test": "ng test frontend-client",
+    "frontend-client:ssr:build": "ng build frontend-client --configuration production && ng run frontend-client:server:production",
+    "frontend-client:ssr:serve": "node dist/frontend-client/server/main.js",
+    "frontend-admin:start": "ng serve frontend-admin",
+    "frontend-admin:build": "ng build frontend-admin",
+    "frontend-admin:test": "ng test frontend-admin",
+    "backend-api:start": "ng serve backend-api",
+    "backend-api:build": "ng build backend-api",
+    "backend-api:test": "ng test backend-api",
+    "db:entities": "node_modules/.bin/tsc --project apps/backend/api/tsconfig.entities.json",
+    "db:migrations:run": "node_modules/.bin/tsc --project apps/backend/api/tsconfig.migrations.json && node_modules/.bin/ts-node node_modules/.bin/typeorm migration:run -t=false",
+    "db:migrations:revert": "node_modules/.bin/ts-node node_modules/.bin/typeorm migration:revert",
+    "db:migration:create": "node_modules/.bin/ts-node node_modules/.bin/typeorm migration:create -n",
+    "db:start": "cp .env ./docker-compose && cd docker-compose && docker-compose up -d",
+    "db:stop": "cd docker-compose && docker-compose stop && rm .env",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "nx workspace-lint && ng lint",
+    "e2e": "ng e2e",
+    "affected:apps": "nx affected:apps",
+    "affected:libs": "nx affected:libs",
+    "affected:build": "nx affected:build",
+    "affected:e2e": "nx affected:e2e",
+    "affected:test": "nx affected:test",
+    "affected:lint": "nx affected:lint",
+    "affected:dep-graph": "nx affected:dep-graph",
+    "affected": "nx affected",
+    "format": "nx format:write",
+    "format:write": "nx format:write",
+    "format:check": "nx format:check",
+    "update": "nx migrate latest",
+    "workspace-generator": "nx workspace-generator",
+    "dep-graph": "nx dep-graph",
+    "help": "nx help",
+    "dev:ssr": "ng run frontend-client:serve-ssr",
+    "serve:ssr": "node dist/frontend-client/server/main.js",
+    "build:ssr": "ng build --configuration production && ng run frontend-client:server:production",
+    "prerender": "ng run frontend-client:prerender"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~16.0.0",
