--- a/package.json
+++ b/package.json
@@ -64,9 +64,11 @@
     "@nx/angular": "16.3.2",
     "@nx/nest": "^16.4.0-beta.1",
     "axios": "^1.0.0",
+    "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typeorm": "^0.3.16",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -81,6 +83,7 @@
     "@angular/language-service": "~16.0.0",
     "@nestjs/schematics": "^9.1.0",
     "@nestjs/testing": "^9.1.1",
+    "@nestjs/typeorm": "^9.0.1",
     "@nx/cypress": "16.3.2",
     "@nx/eslint-plugin": "16.3.2",
     "@nx/jest": "16.4.0-beta.1",
