--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@angular/router": "~16.0.0",
     "@nestjs/common": "^9.1.1",
     "@nestjs/core": "^9.1.1",
+    "@nestjs/graphql": "^11.0.6",
     "@nestjs/platform-express": "^9.1.1",
     "@nx/angular": "16.3.2",
     "@nx/nest": "^16.4.0-beta.1",
