--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@angular/platform-browser": "~16.0.0",
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/router": "~16.0.0",
+    "@diogovcs/graphql-mesh": "^1.0.2",
     "@nestjs/common": "^9.1.1",
     "@nestjs/core": "^9.1.1",
     "@nestjs/graphql": "^11.0.6",
